Filtre par type_place APIs