@@ -21,21 +21,44 @@ public class PlaceService {
         return placeRepository.findAll()
                 .stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<PlaceResponseDto> getByType(String type) {
         return placeRepository.findByPlaceType(type)
                 .stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<PlaceResponseDto> search(String keyword) {
         return placeRepository.findByNameContainingIgnoreCase(keyword)
                 .stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    // FILTRE
+    public List<PlaceResponseDto> filter(
+            String q,
+            String type,
+            Double minPrice,
+            Double maxPrice,
+            String opening) {
+        return placeRepository.filterPlaces(
+                emptyToNull(q),
+                emptyToNull(type),
+                minPrice,
+                maxPrice,
+                emptyToNull(opening))
+                .stream()
+                .map(this::mapToDto)
+                .toList();
+    }
+
+    // 🔧 UTIL
+    private String emptyToNull(String v) {
+        return (v == null || v.isBlank() || v.equalsIgnoreCase("Tous")) ? null : v;
     }
 
     private PlaceResponseDto mapToDto(Place place) {
@@ -51,6 +74,7 @@ public class PlaceService {
         dto.setOpeningHours(place.getOpeningHours());
         dto.setPhone(place.getPhone());
         dto.setWebsiteUrl(place.getWebsiteUrl());
+        dto.setDescription(place.getDescription());
         return dto;
     }
 }
